--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         Design Tokens Generator
       </h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tortor tortor, porttitor cursus commodo sit amet, feugiat sit amet erat. Donec dignissim vulputate mollis. Donec ac lacus id sem vehicula rutrum in bibendum leo. Maecenas commodo luctus feugiat. Cras condimentum libero odio, et cursus ex aliquam et.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tortor tortor, porttitor cursus commodo sit amet, feugiat sit amet erat. Donec dignissim vulputate mollis. Donec ac lacus id sem vehicula rutrum in bibendum leo. Maecenas commodo luctus feugiat. Cras condimentum libero odio, et cursus ex aliquam.
       </p>
     </div>
     <mat-tab-group
