--- a/src/app/components/colorpicker/colorpicker.component.html
+++ b/src/app/components/colorpicker/colorpicker.component.html
@@ -20,7 +20,7 @@
         {{ hex | uppercase }}
       </p> -->
       <p>
-        {{ (hex | slice:-2) === "ff" ? (hex | slice:0:7) : hex }}
+        {{ ((hex | slice:-2) === "ff" ? (hex | slice:0:7) : hex) | uppercase }}
       </p>
     </div>
     <p
