--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,34 @@
 <div
   class="container">
-    <div class="mt-7 mb-7">
-      <h2 class="mb-3">
-        Design Tokens Generator
-      </h2>
+    <app-header></app-header>
+    <!-- <div class="mt-7 mb-7">
+      <div class="div-flex mb-3">
+        <h2 class="div-flex-grow">
+          Design Tokens Generator
+        </h2>
+        <button
+          mat-stroked-button>
+            <i class="uil-file-upload"></i>
+            <span
+              class="ml-2">
+                Import figma tokens json
+            </span>
+        </button>
+        <button
+          mat-flat-button
+          (click)="openDialog()"
+          class="ml-3">
+            <i class="uil-file-download"></i>
+            <span
+              class="ml-2">
+                Download design tokens
+            </span>
+        </button>
+      </div>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tortor tortor, porttitor cursus commodo sit amet, feugiat sit amet erat. Donec dignissim vulputate mollis. Donec ac lacus id sem vehicula rutrum in bibendum leo. Maecenas commodo luctus feugiat. Cras condimentum libero odio, et cursus ex aliquam.
       </p>
-    </div>
+    </div> -->
     <mat-tab-group
       class="uppercase-tabs"
       animationDuration="0ms">
@@ -41,7 +62,7 @@
               </div>
             </div>
 
-            <!-- Contextual Colors -->
+            <!-- Surface Colors -->
             <div class="mb-6">
               <div
                 class="mb-2">
@@ -352,7 +373,7 @@
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="demo-row"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" [id]="i"></tr>
                 </table>
               </div>
 
@@ -596,6 +617,33 @@
           </div>
         </mat-tab>
         <mat-tab label="Typography">
+          <div
+            class="grid">
+              <div
+                class="col-6">
+                <mat-expansion-panel>
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>
+                      <div class="fw-700">Title</div>
+                    </mat-panel-title>
+                    <mat-panel-description>Subtitle text</mat-panel-description>
+                  </mat-expansion-panel-header>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </mat-expansion-panel>
+              </div>
+              <div class="col-6">
+                <mat-expansion-panel>
+                  <mat-expansion-panel-header>
+                    <mat-panel-title>
+                      <div class="fw-700">Title</div>
+                    </mat-panel-title>
+                    <mat-panel-description>Subtitle text</mat-panel-description>
+                  </mat-expansion-panel-header>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </mat-expansion-panel>
+              </div>
+
+          </div>
         </mat-tab>
         <mat-tab label="Interface">
         </mat-tab>
