--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,1 @@
-<div
-  class="container">
-    <app-header></app-header>
-    <mat-tab-group
-      class="uppercase-tabs"
-      animationDuration="0ms">
-        <mat-tab label="Colors">
-          <app-colors></app-colors>
-        </mat-tab>
-        <mat-tab label="Typography">
-          <app-typography></app-typography>
-        </mat-tab>
-        <mat-tab label="Interface">
-          <div
-            class="mt-6 mb-6">
-            </div>
-        </mat-tab>
-    </mat-tab-group>
-</div>
-
+<router-outlet></router-outlet>
