--- a/src/app/layout/design-token-generator/components/typography/typography.component.html
+++ b/src/app/layout/design-token-generator/components/typography/typography.component.html
@@ -66,22 +66,22 @@
             <mat-button-toggle
               class="selection-button bg-white"
               value="option-1">
-              12 px
+              <span class="font-size-medium fw-900 ml-4 mr-4">12 px</span>
             </mat-button-toggle>
             <mat-button-toggle
               class="selection-button bg-white"
               value="option-2">
-                14 px
+                <span class="font-size-medium fw-900 ml-4 mr-4">14 px</span>
             </mat-button-toggle>
             <mat-button-toggle
               class="selection-button bg-white"
               value="option-3">
-                16 px
+                <span class="font-size-medium fw-900 ml-4 mr-4">16 px</span>
             </mat-button-toggle>
             <mat-button-toggle
               class="selection-button bg-white"
               value="option-4">
-                18 px
+                <span class="font-size-medium fw-900 ml-4 mr-4">18 px</span>
             </mat-button-toggle>
         </mat-button-toggle-group>
       </div>
