--- a/src/app/layout/design-token-generator/components/header/header.component.html
+++ b/src/app/layout/design-token-generator/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="mt-7 mb-7">
+<div class="mb-7">
   <div class="div-flex mb-3">
     <h2 class="div-flex-grow">
       Design Tokens Generator
