--- a/src/app/layout/design-token-generator/components/interface/interface.component.html
+++ b/src/app/layout/design-token-generator/components/interface/interface.component.html
@@ -13,12 +13,12 @@
           aria-label="Options"
           class="mat-button-group-width">
             <mat-button-toggle
-              class="selection-button"
+              class="selection-button bg-white"
               value="enable">
                 <span class="font-size-medium fw-900 ml-4 mr-4">Enable</span>
             </mat-button-toggle>
             <mat-button-toggle
-              class="selection-button"
+              class="selection-button bg-white"
               value="disable">
               <span class="font-size-medium fw-900 ml-4 mr-4">Disable</span>
             </mat-button-toggle>
@@ -35,7 +35,7 @@
               Interface Cards
           </p>
           <p
-            class="font-size-small text-color-neutral mb-4">
+            class="border-radius-card-description font-size-small text-color-neutral mb-4">
               Controls the border radius for interface elements such as Project cards and other card-like elements.
           </p>
           <div class="slider-field">
@@ -49,7 +49,7 @@
               Buttons
           </p>
           <p
-            class="font-size-small text-color-neutral mb-4">
+            class="border-radius-card-description font-size-small text-color-neutral mb-4">
               Buttons Controls the border radius for buttons.
           </p>
           <div class="slider-field">
@@ -63,7 +63,7 @@
               Inputs
           </p>
           <p
-            class="font-size-small text-color-neutral mb-4">
+            class="border-radius-card-description font-size-small text-color-neutral mb-4">
               Inputs Controls the border radius for input fields.
           </p>
           <div class="slider-field">
