--- a/src/app/layout/design-token-generator/components/typography/typography.component.html
+++ b/src/app/layout/design-token-generator/components/typography/typography.component.html
@@ -65,23 +65,23 @@
           class="mat-button-group-width">
             <mat-button-toggle
               class="selection-button bg-white"
-              value="option-1">
-              <span class="font-size-medium fw-900 ml-4 mr-4">12 px</span>
+              value="12px">
+              <span class="font-size-medium fw-900 ml-3 mr-3">12 px</span>
             </mat-button-toggle>
             <mat-button-toggle
               class="selection-button bg-white"
-              value="option-2">
-                <span class="font-size-medium fw-900 ml-4 mr-4">14 px</span>
+              value="14px">
+                <span class="font-size-medium fw-900 ml-3 mr-3">14 px</span>
             </mat-button-toggle>
             <mat-button-toggle
               class="selection-button bg-white"
-              value="option-3">
-                <span class="font-size-medium fw-900 ml-4 mr-4">16 px</span>
+              value="16px">
+                <span class="font-size-medium fw-900 ml-3 mr-3">16 px</span>
             </mat-button-toggle>
             <mat-button-toggle
               class="selection-button bg-white"
-              value="option-4">
-                <span class="font-size-medium fw-900 ml-4 mr-4">18 px</span>
+              value="18px">
+                <span class="font-size-medium fw-900 ml-3 mr-3">18 px</span>
             </mat-button-toggle>
         </mat-button-toggle-group>
       </div>
