Ngx datatable test

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -133,6 +133,6 @@
     </nav>
   </div>
   <div class="main-content">
-    <router-outlet></router-outlet>
+    <app-primeng-datatable></app-primeng-datatable>
   </div>
 </div>
