Test PrimeNg Datatable

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import '~@nudgelabs/metron-design-system-lib/src/lib/styles/main';
 
-@import '~@swimlane/ngx-datatable/index.css';
-@import '~@swimlane/ngx-datatable/themes/material.scss';
-@import '~@swimlane/ngx-datatable/assets/icons.css';
+@import url("../node_modules/primeicons/primeicons.css");
+@import url("../node_modules/primeng/resources/themes/saga-blue/theme.css");
+@import url("../node_modules/primeng/resources/primeng.min.css");
 
