--- a/src/app/layout/primeng-datatable/primeng-datatable.component.html
+++ b/src/app/layout/primeng-datatable/primeng-datatable.component.html
@@ -2,7 +2,7 @@
   style="width: 100%; height: 650px"
   class="page-content">
     <div>
-      <h1>Ag-Grid DataTable</h1>
+      <h1>PrimeNg Datatable</h1>
     </div>
     <div class="border-top" style="margin-bottom: 1rem !important;">
     </div>
