--- a/src/app/layout/primeng-datatable/primeng-datatable.component.scss
+++ b/src/app/layout/primeng-datatable/primeng-datatable.component.scss
@@ -74,7 +74,7 @@
               }
 
               .p-datatable-tbody > tr {
-                  border-bottom: 1px solid var(--layer-2);
+                  border-bottom: 1px solid #ccc;
 
                   > td {
                       text-align: left;
