--- a/src/app/layout/primeng-datatable/primeng-datatable.component.html
+++ b/src/app/layout/primeng-datatable/primeng-datatable.component.html
@@ -89,17 +89,15 @@
               <ng-template pTemplate="body" let-customer>
                   <tr class="p-selectable-row">
                       <td>
+                        <span class="p-column-title">Checked</span>
                         <p-tableCheckbox [value]="customer"></p-tableCheckbox>
                       </td>
                       <td>
                           <span class="p-column-title">Name</span>
                           {{customer.name}}
                       </td>
-                      <!-- <td>
-                          <span class="p-column-title">Country</span>
-                          <span class="image-text">{{customer.country.name}}</span>
-                      </td> -->
                       <td pEditableColumn>
+                        <span class="p-column-title">Country</span>
                         <p-cellEditor>
                             <ng-template pTemplate="input">
                                 <input pInputText type="text" [(ngModel)]="customer.country.name">
